# vncv_cpp

./: CMakeLists.txt  Dockerfile.build  README.md  a  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-wheels.yml  build_wheels.yml  cpp-build.yml  publish.yml
csrc/: bindings.cpp  classification.cpp  classification.h  ctc_decoder.cpp  ctc_decoder.h  detection.cpp  detection.h  ocr_engine.cpp  ocr_engine.h  recognition_en.cpp  recognition_en.h  recognition_vi.cpp  recognition_vi.h  test_sdk.cpp  utils.cpp  utils.h  vocab.cpp  vocab.h
tests/: conftest.py  test_bugs.py  test_classification.py  test_compare.py  test_ctc_decoder.py  test_detection.py  test_recognition_en.py  test_utils.py  test_vocab_onnx.py
vncv/: __init__.py  _cpp_wrapper.py  ocr.py
