[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "vncv"
version = "0.2.0"
description = "Vietnamese OCR engine optimized for CPU deployments – C++ ONNX Runtime backend"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "LicenseRef-DevHubSolutions"
license-files = ["LICENSE"]
authors = [
  {name = "DevHub Solutions"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
# numpy retained only for the pure-Python fallback path
dependencies = [
  "numpy>=1.24"
]

[project.optional-dependencies]
# Pure-Python fallback – only needed when the C++ extension is not available
python-fallback = [
  "onnxruntime",
  "opencv-python",
  "shapely",
  "pyclipper",
  "numpy==1.26.4",
  "pillow"
]

[project.urls]
Homepage = "https://github.com/Devhub-Solutions/VNCV"
Repository = "https://github.com/Devhub-Solutions/VNCV"

[project.scripts]
vncv = "vncv.ocr:main"

# ─────────────────────────────────────────────────────────────────────────────
# scikit-build-core configuration
# ─────────────────────────────────────────────────────────────────────────────

[tool.scikit-build]
# The CMakeLists.txt is in the repo root
cmake.build-type = "Release"
# Include the Python package source
wheel.packages = ["vncv"]

[tool.scikit-build.cmake.define]
VNCV_BUILD_PYTHON = "ON"

# ─────────────────────────────────────────────────────────────────────────────
# setuptools fallback (for `pip install -e .` without scikit-build-core)
# ─────────────────────────────────────────────────────────────────────────────

[tool.setuptools]
packages = ["vncv", "vncv.weights"]
include-package-data = true

[tool.setuptools.package-data]
vncv = ["weights/*.onnx", "weights/*.onnx.data", "weights/*.json"]
