[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "vncv_cpp"
version = "0.2.0"
description = "Vietnamese OCR engine optimized for CPU deployments – C++ ONNX Runtime backend"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "LicenseRef-DevHubSolutions"
license-files = ["LICENSE"]
authors = [
  {name = "DevHub Solutions"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
# lightweight runtime dependency
dependencies = [
  "numpy>=1.24"
]

[project.urls]
Homepage = "https://github.com/Devhub-Solutions/VNCV"
Repository = "https://github.com/Devhub-Solutions/VNCV"

[project.scripts]
vncv = "vncv._cpp_wrapper:main"

# ─────────────────────────────────────────────────────────────────────────────
# scikit-build-core configuration
# ─────────────────────────────────────────────────────────────────────────────

[tool.scikit-build]
# The CMakeLists.txt is in the repo root
cmake.build-type = "Release"
# Include the Python package source
wheel.packages = ["vncv"]
# Keep test data and aux tooling out of the sdist, but ship C++ sources for builds
sdist.exclude = ["tests/**", "vietocr-onnx-package/**"]

[tool.scikit-build.cmake.define]
VNCV_BUILD_PYTHON = "ON"

# ─────────────────────────────────────────────────────────────────────────────
# setuptools fallback (for `pip install -e .` without scikit-build-core)
# ─────────────────────────────────────────────────────────────────────────────

[tool.setuptools]
packages = ["vncv", "vncv.weights"]
include-package-data = true

[tool.setuptools.package-data]
vncv = ["weights/*.onnx", "weights/*.onnx.data", "weights/*.json"]
